Fixed EmojiTranslation to work with unicode that contains invisible codepoints (stuff like skin tones)

--- a/main/static/main/styles.css
+++ b/main/static/main/styles.css
@@ -1,43 +1,42 @@
 html, body {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    background-color: #fff;
-  }
-  
-  main {
-    margin: auto;
-    width: 50%;
-    padding: 20px;
-    padding-top: 15%;
-  }
-  
-  main > h1 {
-    text-align: center;
-    font-size: 3.5em;
-    padding-bottom: 2rem;
-    justify-content: center;
-
-  }
-  
-.searchbar
-{
-  display: flex;
-  justify-content: center;
-  gap: 10px;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  background-color: #fff;
 }
 
-  .addDollarSymbol
-  {
-      position: relative;
-  }
-  
-  .addDollarSymbol::after
-  {
-      position: absolute;
-      left: 4px;
-      top: 7px;
-      content: attr(data-placeholder);
-      pointer-events: none;
-      opacity: 0.65;
-  }
+.hero-section {
+  margin: auto;
+  width: 50%;
+  height: 80%;
+  padding: 20px;
+  padding-top: 15%;
+  text-align: center;
+}
+
+main > h1 {
+text-align: center;
+font-size: 8.5em;
+padding-bottom: 2rem;
+justify-content: center;
+}
+
+.searchbar
+{
+display: flex;
+justify-content: center;
+gap: 10px;
+}
+
+.addDollarSymbol {
+position: relative;
+}
+
+.addDollarSymbol::after {
+position: absolute;
+left: 4px;
+top: 7px;
+content: attr(data-placeholder);
+pointer-events: none;
+opacity: 0.65;
+}
